@@ -5,6 +5,7 @@
 - fix extract_variable not recognising ${var} end of string (RT#70007)
 - fix string-comparing $@ causing exception (RT#74994)
 - docs updated to correct CSV example (RT#140408) - thanks @djerius
+- fix extract_codeblock being confused by // (RT#78313)
 
 2.04 2020-12-11
 
